<resources>
    <string name="app_name">VehicleMonitoringSystemMobile</string>
    <string name="action_settings">Settings</string>

    <!--    Server URL-->
    <string name="azure_server_url" translatable="false">http://indiewindy.azurewebsites.net</string>
    <string name="server_url" translatable="false">https://10.0.2.2:5001</string>
    <string name="server_host" translatable="false">10.0.2.2</string>

    <!--    Errors-->
    <string name="error_handler__timeout">No connection error</string>
    <string name="error_handler__no_connection">Connection timeout error</string>

    <!--    Location activity-->
    <string name="location__track_button__start">Start</string>
    <string name="location__track_button__stop">Stop</string>

    <!--   LocationService -->
    <string name="location_service__notification_text">Is locating your device…</string>
    <string name="launch_title">VMS</string>

    <!--    FirebaseUI activity-->
    <!-- Chooser -->
    <string name="title_auth_activity">Auth UI Demo</string>
    <string name="title_firestore_activity">Cloud Firestore Demo</string>
    <string name="title_firestore_paging_activity">Cloud Firestore Paging Demo</string>
    <string name="title_realtime_database_activity">Realtime Database Demo</string>
    <string name="title_realtime_database_paging_activity">Realtime Database Paging Demo</string>
    <string name="title_storage_activity">Storage Image Demo</string>

    <string name="desc_auth">Demonstrates the Firebase Auth UI flow, with customization options.</string>
    <string name="desc_anonymous_upgrade">Demonstrates upgrading an anonymous account using FirebaseUI.</string>
    <string name="desc_firestore">Demonstrates using a FirestoreRecyclerAdapter to load data from Cloud Firestore into a RecyclerView for a basic chat app.</string>
    <string name="desc_firestore_paging">Demonstrates using a FirestorePagingAdapter to load/infinite scroll paged data from Cloud Firestore.</string>
    <string name="desc_realtime_database">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
    <string name="desc_realtime_database_paging">Demonstrates using a FirebaseRecyclerPagingAdapter to load/infinite scroll paged data from Firebase Realtime Database.</string>
    <string name="desc_storage">Demonstrates displaying an image from Cloud Storage using Glide.</string>

    <!-- Auth UI -->
    <string name="sign_in_start">Start</string>
    <string name="sign_in_silent">Sign in silently</string>

    <string name="providers_email">Email</string>
    <string name="providers_email_link">Email link</string>

    <string name="layout_header">Layout</string>
    <string name="layout_default">Default</string>
    <string name="layout_custom">Custom</string>

    <string name="options_header">Other Options</string>
    <string name="options_enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="options_enable_hint_selector">Enable Smart Lock\'s hint selector</string>

    <string name="configuration_required">Configuration required - see README.md</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="account_disabled">Account is disabled by the administrator</string>
    <string name="unknown_error">An unknown error occurred</string>

    <string name="title_anonymous_upgrade">FirebaseUI Anonymous Account Linking</string>
    <string name="anonymous_sign_in">Anonymous Sign In</string>
    <string name="launch_auth_ui">Launch Auth UI</string>
    <string name="resolve_merge_conflict">Resolve Merge Conflict</string>

    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>

    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="used_providers">Providers used: %s</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>

    <!-- Auth UI - Custom AuthMethodPickerLayout -->
    <string name="custom_layout_subheader">Sign in using this nice custom layout!</string>
    <string name="custom_layout_idp_header">Choose a provider</string>
    <string name="custom_layout_email_header">Use your email</string>
    <string name="custom_layout_email_click_text">Continue with Email</string>


    <!-- Storage -->
    <string name="choose_image">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="send">Send</string>
    <string name="accessibility_downloaded_image">Downloaded image</string>

    <string name="rational_image_perm">This sample will read an image from local storage to upload to Cloud Storage.</string>

    <!-- Database -->
    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_in">Signed In</string>
    <string name="anonymous_auth_failed_msg">
        Anonymous authentication failed, various components of the demo will not work.
        Make sure your device is online and that Anonymous Auth is configured in your Firebase project
        (https://console.firebase.google.com/project/_/authentication/providers)
    </string>

    <string name="menu_add_data">Add Data</string>
    <string name="hint_message">Say something…</string>
    <string name="paging_finished_message">Reached End of List</string>

    <!--    Navigation bottom bar-->
    <string name="navigation__title_home">Home</string>
    <string name="navigation__title_location">Location</string>
    <string name="navigation__title_dashboard">Dashboard</string>
    <string name="navigation__title_settings">Settings</string>
    <string name="navigation__title_navigation">Navigation</string>

</resources>
